--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,14 +1,57 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<Shell
+    
+ <Shell
     x:Class="PersonalManager.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:PersonalManager"
-    Shell.FlyoutBehavior="Disabled">
+    xmlns:local="clr-namespace:PersonalManager.Views"
+    Shell.FlyoutBehavior="Disabled"
+    Shell.TabBarBackgroundColor="Black"    
+    Shell.TabBarTitleColor="#0062F0"
+    Shell.TabBarUnselectedColor="#A0A3A8"
+    Shell.TitleColor="White"
+    Shell.BackgroundColor="Black">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        <TabBar>
+            <Tab Title="Dashboard" Icon="dashboard.png"
+             >
+                <ShellContent
 
-</Shell>
+                Title="Dashboard"
+                ContentTemplate="{DataTemplate local:DashboardPage}"
+                Route="DashboardPage" />
+            </Tab>
+            <Tab Title="Finance" Icon="finance.png">
+                <ShellContent
+                Title="Finance"
+                ContentTemplate="{DataTemplate local:FinancePage}"
+                Route="FinancePage" />
+            </Tab>
+            <Tab Title="Add" Icon="plus.png">
+                <ShellContent
+                
+                Title="Add"
+                ContentTemplate="{DataTemplate local:AddPage}"
+                Route="AddPage" />
+            </Tab>
+            <Tab Title="Calendar" Icon="calendar.png">
+            <ShellContent
+                Title="Calendar"
+                ContentTemplate="{DataTemplate local:CalendarPage}"
+                Route="CalendarPage" />
+            </Tab>
+
+            
+            <Tab Title="Profile" Icon="user.png">
+                <ShellContent
+                Title="Profile"
+                ContentTemplate="{DataTemplate local:ProfilePage}"
+                Route="ProfilePage" />
+            </Tab>
+        </TabBar>
+
+
+
+
+    </Shell>
+    
