--- a/Views/AddPage.xaml
+++ b/Views/AddPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PersonalManager.Views.AddPage"
-             Title="AddPage">
+             Title="Add+"
+             BackgroundColor="Black"
+             Padding="20">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
