--- a/Views/DashboardPage.xaml
+++ b/Views/DashboardPage.xaml
@@ -2,11 +2,110 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PersonalManager.Views.DashboardPage"
-             Title="DashboardPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="DashboardPage"
+             BackgroundColor="Black"
+             Padding="10">
+    <Grid RowSpacing="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1.3*"/>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="9*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <VerticalStackLayout Grid.Column="1" Spacing="10">
+        <Label Text="Finance" HorizontalTextAlignment="Center" TextColor="Blue" FontSize="30"/>
+        <Border Stroke="blue" HeightRequest="200" StrokeShape="RoundRectangle 50" StrokeThickness="3" Padding="10" BackgroundColor="Black">
+            <Grid ColumnSpacing="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Label Text="+28031.2" FontSize="30"  TextColor="Green" HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold"/>
+                    <Label Text="+28031.2" FontSize="30" TextColor="Red" HorizontalOptions="Center" VerticalOptions="Center" Grid.Column="1"/>
+                <Line Grid.Row="1" BackgroundColor="DimGrey" Grid.ColumnSpan="2" VerticalOptions="Start" HeightRequest="1"/>
+                <Label Text="+280" FontSize="30"  TextColor="Green" Grid.Row="1" Grid.ColumnSpan="2"
+                       HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold"/>
+                </Grid>
+        </Border>
+        </VerticalStackLayout>
+
+        <VerticalStackLayout Grid.Column="1" Grid.Row="1" Spacing="10" IsVisible="false">
+            <Label Text="Reminder" HorizontalTextAlignment="Center" TextColor="Blue" FontSize="30"/>
+            <Border Stroke="blue" HeightRequest="130" StrokeShape="RoundRectangle 50" StrokeThickness="3" Padding="15" BackgroundColor="Black">
+                <Grid ColumnSpacing="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2.5*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Label Text="+28sWAACJKCC" FontSize="25"  TextColor="Grey" HorizontalOptions="Center" Grid.RowSpan="2"
+                           VerticalOptions="Center" FontAttributes="Bold"/>
+                    <Label Text="28" FontSize="25" TextColor="DarkGreen" HorizontalOptions="Center" VerticalOptions="Center" Grid.Column="1"/>
+                    <Line Grid.Row="1" BackgroundColor="DimGrey"  VerticalOptions="Start" HeightRequest="1" Grid.Column="1"/>
+                    <Line BackgroundColor="DimGrey"  VerticalOptions="Start" WidthRequest="1" Grid.Column="1" 
+                          HorizontalOptions="Start" Grid.RowSpan="2"/>
+                    <Label Text="MAR" FontSize="25"  TextColor="DarkGreen" Grid.Row="1" Grid.Column="1"
+                       HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold"/>
+                </Grid>
+            </Border>
+        </VerticalStackLayout>
+        <VerticalStackLayout Grid.Column="1" Grid.Row="1" Spacing="10">
+            <Label Text="Reminder" HorizontalTextAlignment="Center" TextColor="Blue" FontSize="30"/>
+            <Border Stroke="blue" HeightRequest="130" StrokeShape="RoundRectangle 50" StrokeThickness="3" Padding="15" BackgroundColor="Black">
+                <Label Text="No reminders yet" FontSize="25" TextColor="DimGray" HorizontalOptions="Center"
+                           VerticalOptions="Center" FontAttributes="Bold"/>
+            </Border>
+        </VerticalStackLayout>
+        <Button Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="View all>" TextColor="DimGrey"
+                BackgroundColor="Transparent" HeightRequest="50" WidthRequest="90" 
+                VerticalOptions="Start" HorizontalOptions="End"/>
+
+        <VerticalStackLayout Grid.Column="1" Grid.Row="2" Spacing="10" VerticalOptions="Start" IsVisible="false">
+            <Label Text="Note" HorizontalTextAlignment="Center" TextColor="Blue" FontSize="30"/>
+            <Border Stroke="blue" HeightRequest="130" StrokeShape="RoundRectangle 50" StrokeThickness="3" Padding="20" BackgroundColor="Black">
+                <Grid ColumnSpacing="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1.3*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Label Text="Note" FontSize="25" TextColor="DarkGoldenrod" HorizontalOptions="Start"
+                           VerticalOptions="Center" FontAttributes="Bold"/>
+                    <Line Grid.Row="0" BackgroundColor="Yellow"  VerticalOptions="End" HeightRequest="0.1" Grid.ColumnSpan="2"/>
+                    <Label Text="Content" Grid.Row="1" VerticalOptions="Center" HorizontalOptions="Start" TextColor="NavajoWhite"/>
+                </Grid>
+            </Border>
+        </VerticalStackLayout>
+        <VerticalStackLayout Grid.Column="1" Grid.Row="2" Spacing="10" VerticalOptions="Start" IsVisible="true">
+            <Label Text="Note" HorizontalTextAlignment="Center" TextColor="Blue" FontSize="30"/>
+            <Border Stroke="blue" HeightRequest="130" StrokeShape="RoundRectangle 50" StrokeThickness="3" Padding="15" BackgroundColor="Black">
+                <Label Text="No notes yet" FontSize="25" TextColor="DimGray" HorizontalOptions="Center"
+                           VerticalOptions="Center" FontAttributes="Bold"/>
+            </Border>
+        </VerticalStackLayout>
+        <Button Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Text="View all>" TextColor="DimGrey"
+                BackgroundColor="Transparent" HeightRequest="50" WidthRequest="90" 
+                VerticalOptions="Start" HorizontalOptions="End"/>
+    </Grid>
+
 </ContentPage>
