--- a/Views/AddPage.xaml
+++ b/Views/AddPage.xaml
@@ -17,8 +17,8 @@
         </Grid.ColumnDefinitions>
         <Label Text="+" TextColor="DarkRed" FontSize="50" VerticalOptions="Center" HorizontalOptions="Center"/>
         <Label Text="Expense" Grid.Column="1" FontSize="40" VerticalOptions="Center" TextColor="DarkRed"/>
-        <Button x:Name="ExpensesButton" BackgroundColor="Transparent"
-                                Grid.ColumnSpan="2" Grid.RowSpan="2"></Button>
+        <Button x:Name="ExpenseButton" BackgroundColor="Transparent" Clicked="ExpenseButton_Clicked"
+                                Grid.ColumnSpan="2" Grid.RowSpan="1"></Button>
         </Grid>
         </Border>
 
@@ -33,8 +33,8 @@
                 </Grid.ColumnDefinitions>
                 <Label Text="+" TextColor="DarkGreen" FontSize="50" VerticalOptions="Center" HorizontalOptions="Center"/>
                 <Label Text="Earning" Grid.Column="1" FontSize="40" VerticalOptions="Center" TextColor="DarkGreen"/>
-                <Button BackgroundColor="Transparent"
-                                Grid.ColumnSpan="2" Grid.RowSpan="2"></Button>
+                <Button x:Name="EarningButton" BackgroundColor="Transparent" Clicked="EarningButton_Clicked"
+                                Grid.ColumnSpan="2" Grid.RowSpan="1"></Button>
             </Grid>
         </Border>
 
@@ -49,8 +49,8 @@
                 </Grid.ColumnDefinitions>
                 <Label Text="+" TextColor="orange" FontSize="50" VerticalOptions="Center" HorizontalOptions="Center"/>
                 <Label Text="Note" Grid.Column="1" FontSize="40" VerticalOptions="Center" TextColor="Orange"/>
-                <Button BackgroundColor="Transparent"
-                                Grid.ColumnSpan="2" Grid.RowSpan="2"></Button>
+                <Button x:Name="NoteButton" BackgroundColor="Transparent" Clicked="NoteButton_Clicked"
+                                Grid.ColumnSpan="2" Grid.RowSpan="1"></Button>
             </Grid>
         </Border>
 
@@ -65,8 +65,8 @@
                 </Grid.ColumnDefinitions>
                 <Label Text="+" TextColor="purple" FontSize="50" VerticalOptions="Center" HorizontalOptions="Center"/>
                 <Label Text="Reminder" Grid.Column="1" FontSize="40" VerticalOptions="Center" TextColor="purple"/>
-                <Button BackgroundColor="Transparent"
-                                Grid.ColumnSpan="2" Grid.RowSpan="2"></Button>
+                <Button x:Name="ReminderButton" BackgroundColor="Transparent" Clicked="ReminderButton_Clicked"
+                                Grid.ColumnSpan="2" Grid.RowSpan="1"></Button>
             </Grid>
         </Border>
     </VerticalStackLayout>
