--- a/Views/ElementPages/AddNotePage.xaml
+++ b/Views/ElementPages/AddNotePage.xaml
@@ -2,11 +2,30 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PersonalManager.Views.ElementPages.AddNotePage"
-             Title="AddNotePage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             Title="AddNotePage"
+             BackgroundColor="Black"
+             Padding="30">
+    <VerticalStackLayout Spacing="20">
+        <Label Text="Add Note" FontSize="40" HorizontalOptions="Center" TextColor="WhiteSmoke"/>
+        <Border Stroke="orange" StrokeShape="RoundRectangle 25" StrokeThickness="3" Padding="30" BackgroundColor="Black" MinimumHeightRequest="450">
+            <Grid RowSpacing="30">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="3*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Border BackgroundColor="Transparent" StrokeShape="RoundRectangle 60" MinimumWidthRequest="225"
+                            Stroke="DimGray" >
+                    <Entry BackgroundColor="Transparent" FontSize="25" Keyboard="Text"  Placeholder="Add Title"
+                               PlaceholderColor="DimGray" TextColor="White" VerticalOptions="Center" HorizontalTextAlignment="Center"/>
+                </Border>
+                <Border Grid.Row="1" BackgroundColor="Transparent" Padding="15" StrokeThickness="1" StrokeShape="RoundRectangle 20" Stroke="dimgray">
+                    <Editor FontSize="Small" Placeholder="Add text" PlaceholderColor="DimGrey" WidthRequest="200" TextColor="White"/>
+                </Border>
+            </Grid>
+        </Border>
+        <Button BackgroundColor="orange" Text="Add" CornerRadius="20" FontSize="Medium"/>
     </VerticalStackLayout>
 </ContentPage>
