--- a/Views/ElementPages/AddNotePage.xaml
+++ b/Views/ElementPages/AddNotePage.xaml
@@ -11,12 +11,12 @@
             <Grid RowSpacing="30">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
-                    <RowDefinition Height="3*"/>
+                    <RowDefinition Height="4*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Border BackgroundColor="Transparent" StrokeShape="RoundRectangle 60" MinimumWidthRequest="225"
+                <Border BackgroundColor="Transparent" StrokeShape="RoundRectangle 60" MinimumWidthRequest="225" HeightRequest="65"
                             Stroke="DimGray" >
                     <Entry BackgroundColor="Transparent" FontSize="25" Keyboard="Text"  Placeholder="Add Title"
                                PlaceholderColor="DimGray" TextColor="White" VerticalOptions="Center" HorizontalTextAlignment="Center"/>
