Create pages for all Earnings/Expenses, make repository classes for them, add some styling. Create pages for all Reminders/Notes, optimize pages for long titles

--- a/Views/AddPage.xaml
+++ b/Views/AddPage.xaml
@@ -6,7 +6,7 @@
              BackgroundColor="Black"
              Padding="20">
     <VerticalStackLayout Spacing="15">
-        <Border Stroke="darkred" StrokeShape="RoundRectangle 50" StrokeThickness="2" Padding="10" BackgroundColor="Black">
+        <Border Stroke="#0062F0" StrokeShape="RoundRectangle 50" StrokeThickness="2" Padding="10" BackgroundColor="Black">
         <Grid>
         <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -15,14 +15,14 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
-        <Label Text="+" TextColor="DarkRed" FontSize="50" VerticalOptions="Center" HorizontalOptions="Center"/>
+                <Label Text="+" TextColor="DarkRed" FontSize="50" VerticalOptions="Center" HorizontalOptions="Center"/>
         <Label Text="Expense" Grid.Column="1" FontSize="40" VerticalOptions="Center" TextColor="DarkRed"/>
         <Button x:Name="ExpenseButton" BackgroundColor="Transparent" Clicked="ExpenseButton_Clicked"
                                 Grid.ColumnSpan="2" Grid.RowSpan="1"></Button>
         </Grid>
         </Border>
 
-        <Border Stroke="DarkGreen" StrokeShape="RoundRectangle 50" StrokeThickness="2" Padding="10" BackgroundColor="Black">
+        <Border Stroke="#0062F0" StrokeShape="RoundRectangle 50" StrokeThickness="2" Padding="10" BackgroundColor="Black">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -38,7 +38,7 @@
             </Grid>
         </Border>
 
-        <Border Stroke="orange" StrokeShape="RoundRectangle 50" StrokeThickness="2" Padding="10" BackgroundColor="Black">
+        <Border Stroke="#0062F0" StrokeShape="RoundRectangle 50" StrokeThickness="2" Padding="10" BackgroundColor="Black">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -47,14 +47,14 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="4*"/>
                 </Grid.ColumnDefinitions>
-                <Label Text="+" TextColor="orange" FontSize="50" VerticalOptions="Center" HorizontalOptions="Center"/>
+                <Label Text="+" TextColor="Orange" FontSize="50" VerticalOptions="Center" HorizontalOptions="Center"/>
                 <Label Text="Note" Grid.Column="1" FontSize="40" VerticalOptions="Center" TextColor="Orange"/>
                 <Button x:Name="NoteButton" BackgroundColor="Transparent" Clicked="NoteButton_Clicked"
                                 Grid.ColumnSpan="2" Grid.RowSpan="1"></Button>
             </Grid>
         </Border>
 
-        <Border Stroke="purple" StrokeShape="RoundRectangle 50" StrokeThickness="2" Padding="10" BackgroundColor="Black">
+        <Border Stroke="#0062F0" StrokeShape="RoundRectangle 50" StrokeThickness="2" Padding="10" BackgroundColor="Black">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -63,7 +63,7 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="4*"/>
                 </Grid.ColumnDefinitions>
-                <Label Text="+" TextColor="purple" FontSize="50" VerticalOptions="Center" HorizontalOptions="Center"/>
+                <Label Text="+" TextColor="Purple" FontSize="50" VerticalOptions="Center" HorizontalOptions="Center"/>
                 <Label Text="Reminder" Grid.Column="1" FontSize="40" VerticalOptions="Center" TextColor="purple"/>
                 <Button x:Name="ReminderButton" BackgroundColor="Transparent" Clicked="ReminderButton_Clicked"
                                 Grid.ColumnSpan="2" Grid.RowSpan="1"></Button>
