--- a/Views/ElementPages/EarningsPage.xaml
+++ b/Views/ElementPages/EarningsPage.xaml
@@ -5,6 +5,12 @@
              Title="Earnings"
              Padding="10"
              BackgroundColor="black">
+    <ContentPage.Resources>
+        <LinearGradientBrush x:Key="GradientBrush" StartPoint="0,0" EndPoint="1,1">
+            <GradientStop Color="Green" Offset="0"/>
+            <GradientStop Color="Blue" Offset="3"/>
+        </LinearGradientBrush>
+    </ContentPage.Resources>
     <ScrollView>
     <VerticalStackLayout Padding="5" Spacing="10">
         <Label 
@@ -13,7 +19,7 @@
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
         <!--<Border Stroke="#0062F0" StrokeThickness="3" Padding="15" BackgroundColor="Transparent">-->
-        <Border Stroke="#0062F0" StrokeShape="RoundRectangle 25" Padding="20" StrokeThickness="3" BackgroundColor="Transparent">
+        <Border Stroke="{StaticResource GradientBrush}" StrokeShape="RoundRectangle 25" Padding="20" StrokeThickness="3" BackgroundColor="Transparent">
         <ListView x:Name="EarningsListView" RowHeight="100"> 
             <ListView.ItemTemplate>
                 <DataTemplate>
