--- a/Views/ElementPages/RemindersPage.xaml
+++ b/Views/ElementPages/RemindersPage.xaml
@@ -2,11 +2,50 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PersonalManager.Views.ElementPages.RemindersPage"
-             Title="RemindersPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
+             Title="RemindersPage"
+             Padding="10"
+             BackgroundColor="Black">
+    <ContentPage.Resources>
+        <LinearGradientBrush x:Key="GradientBrush" StartPoint="0,0" EndPoint="1,1">
+            <GradientStop Color="Purple" Offset="0"/>
+            <GradientStop Color="Blue" Offset="1"/>
+        </LinearGradientBrush>
+    </ContentPage.Resources>
+    <ScrollView>
+        <VerticalStackLayout Padding="5" Spacing="10">
+            <Label 
+            Text="All Reminders"
+            FontSize="30" TextColor="#0062F0"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
-    </VerticalStackLayout>
+            <Border Stroke="{StaticResource GradientBrush}" StrokeShape="RoundRectangle 25" Padding="20" StrokeThickness="3" BackgroundColor="Transparent">
+                <ListView x:Name="RemindersListView" RowHeight="130">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="2*"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label Text="{Binding TitleString}" FontSize="25" TextColor="Orange" VerticalOptions="Center"/>
+                                    <Label Text="{Binding Text}" FontSize="15" TextColor="Gray" Grid.Row="1" VerticalOptions="Center"/>
+                                    <VerticalStackLayout Grid.Column="1" Grid.RowSpan="2" Spacing="10"
+                                                         VerticalOptions="Center" HorizontalOptions="Center">
+                                    <Label Text="15 MAR" FontSize="20" VerticalOptions="Center"/>
+                                    <Label Text="9:00" FontSize="20" VerticalOptions="Center" HorizontalOptions="Center"/>
+                                    </VerticalStackLayout>
+                                    <Line Grid.ColumnSpan="2" Grid.Row="1" HeightRequest="1" BackgroundColor="DimGray" VerticalOptions="End"/>
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Border>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
