--- a/Views/ElementPages/RemindersPage.xaml
+++ b/Views/ElementPages/RemindersPage.xaml
@@ -19,7 +19,7 @@
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
             <Border Stroke="{StaticResource GradientBrush}" StrokeShape="RoundRectangle 25" Padding="20" StrokeThickness="3" BackgroundColor="Transparent">
-                <ListView x:Name="RemindersListView" RowHeight="130">
+                <ListView x:Name="RemindersListView" RowHeight="150">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
@@ -32,12 +32,12 @@
                                         <ColumnDefinition Width="2*"/>
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
-                                    <Label Text="{Binding TitleString}" FontSize="25" TextColor="Orange" VerticalOptions="Center"/>
-                                    <Label Text="{Binding Text}" FontSize="15" TextColor="Gray" Grid.Row="1" VerticalOptions="Center"/>
+                                    <Label Text="{Binding TitleString}" FontSize="25" TextColor="MediumPurple" VerticalOptions="Center"/>
+                                    <Label Text="{Binding TextString}" FontSize="15" TextColor="Gray" Grid.Row="1" VerticalOptions="Start"/>
                                     <VerticalStackLayout Grid.Column="1" Grid.RowSpan="2" Spacing="10"
                                                          VerticalOptions="Center" HorizontalOptions="Center">
-                                    <Label Text="15 MAR" FontSize="20" VerticalOptions="Center"/>
-                                    <Label Text="9:00" FontSize="20" VerticalOptions="Center" HorizontalOptions="Center"/>
+                                    <Label Text="{Binding DayOfMonth}" FontSize="22" VerticalOptions="Center" TextColor="DimGrey"/>
+                                    <Label Text="{Binding Time}" FontSize="20" VerticalOptions="Center" HorizontalOptions="Center" TextColor="DimGrey"/>
                                     </VerticalStackLayout>
                                     <Line Grid.ColumnSpan="2" Grid.Row="1" HeightRequest="1" BackgroundColor="DimGray" VerticalOptions="End"/>
                                 </Grid>
