--- a/Views/FinancePage.xaml
+++ b/Views/FinancePage.xaml
@@ -5,7 +5,8 @@
              Title="FinancePage">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            x:Name="TestLabel"
+            Text=""
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
