--- a/Views/ElementPages/NotesPage.xaml
+++ b/Views/ElementPages/NotesPage.xaml
@@ -29,11 +29,11 @@
                                         <RowDefinition Height="2*"/>
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="3*"/>
+                                        <ColumnDefinition Width="6*"/>
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
-                                    <Label Text="{Binding Title}" FontSize="30" TextColor="Orange" VerticalOptions="Center"/>
-                                    <Label Text="{Binding Text}" FontSize="20" TextColor="Gray" Grid.Row="1" VerticalOptions="Start"/>
+                                    <Label Text="{Binding TitleString}" FontSize="20" TextColor="Orange" VerticalOptions="Center" Grid.ColumnSpan="2"/>
+                                    <Label Text="{Binding TextString}" FontSize="15" TextColor="Gray" Grid.Row="1" VerticalOptions="Start"/>
                                     <Line Grid.ColumnSpan="2" Grid.Row="1" HeightRequest="1" BackgroundColor="DimGray" VerticalOptions="End"/>
                                 </Grid>
                             </ViewCell>
